--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ body {
   padding: 0%;
   height: 100vh;
   width: auto;
+  font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 @font-face {
   font-family: "Norse-Bold";
@@ -15,7 +17,7 @@ body {
 }
 
 .left {
-  flex: 0.75 0 100px;
+  flex: 0.7 0 100px;
   background-image: url(./assets/tractor-bg.jpg);
   background-position: center right;
   background-size: cover;
@@ -44,12 +46,12 @@ body {
 
 .right {
   flex: 2;
-  background-color: grey;
+  background-color: rgb(241, 241, 241);
 
   display: flex;
   flex-direction: column;
 }
-//temp
+
 div.right > div {
   flex: 1;
 }
@@ -61,6 +63,41 @@ div.right > div {
 
 .form-area {
   padding: 0px 5%;
+  padding-bottom: 3%;
+  background-color: white;
 }
-.form {
+
+form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 17%;
+}
+.form-left,
+.form-right {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.pair {
+  display: flex;
+  flex-direction: column;
+}
+label {
+  text-transform: uppercase;
+  letter-spacing: 0.15rem;
+  font-size: 0.8rem;
+}
+input {
+  font-size: 1rem;
+  width: 230px;
+  border: 1px solid #e5e7eb;
+  border-radius: 5px;
+  padding: 2%;
+  letter-spacing: 0.1rem;
+}
+
+input:focus {
+  border: 3px solid blue;
 }
