--- a/styles.css
+++ b/styles.css
@@ -59,12 +59,14 @@ div.right > div {
 .ad-text {
   font-size: 1.5rem;
   padding: 0px 5%;
+  letter-spacing: 0.115rem;
 }
 
 .form-area {
   padding: 0px 5%;
   padding-bottom: 3%;
   background-color: white;
+  box-shadow: 5px 5px 7px gray;
 }
 
 form {
