--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   padding: 0%;
   height: 100vh;
   width: auto;
-  font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+  font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 @font-face {
@@ -17,7 +17,7 @@ body {
 }
 
 .left {
-  flex: 0.7 0 100px;
+  flex: 0.67 0 100px;
   background-image: url(./assets/tractor-bg.jpg);
   background-position: center right;
   background-size: cover;
@@ -57,9 +57,10 @@ div.right > div {
 }
 
 .ad-text {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   padding: 0px 5%;
-  letter-spacing: 0.115rem;
+  letter-spacing: 0.005rem;
+  font-weight: 540;
 }
 
 .form-area {
@@ -68,7 +69,12 @@ div.right > div {
   background-color: white;
   box-shadow: 5px 5px 7px gray;
 }
-
+.heading {
+  font-size: 1.4rem;
+  padding: 17px 0px;
+  letter-spacing: 0.05rem;
+  font-weight: 550;
+}
 form {
   display: flex;
   flex-wrap: wrap;
@@ -102,4 +108,23 @@ input {
 
 input:focus {
   border: 3px solid blue;
+}
+
+.button-area {
+  padding: 0px 5%;
+}
+.submit-btn {
+  margin-top: 27px;
+  font-size: 1rem;
+  font-weight: bold;
+  color: white;
+  background-color: #596d48;
+  border: none;
+  border-radius: 7px;
+  padding: 10px 50px;
+}
+p > a {
+  text-decoration: none;
+  color: #596d48;
+  font-weight: bold;
 }
