--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
   font-family: "Norse-Bold";
   src: url(./assets/Norse-Bold.otf);
 }
+
 .main {
   height: 100%;
   width: 100%;
@@ -17,7 +18,7 @@ body {
 }
 
 .left {
-  flex: 0.67 0 100px;
+  flex: 0.6 0 100px;
   background-image: url(./assets/tractor-bg.jpg);
   background-position: center right;
   background-size: cover;
@@ -58,9 +59,10 @@ div.right > div {
 
 .ad-text {
   font-size: 1.3rem;
-  padding: 0px 5%;
+  padding: 7% 30% 0px 5%;
   letter-spacing: 0.005rem;
   font-weight: 540;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .form-area {
@@ -127,4 +129,11 @@ p > a {
   text-decoration: none;
   color: #596d48;
   font-weight: bold;
+}
+
+input[type="password"]:valid {
+  border-color: #e5e7eb;
+}
+input[type="password"]:invalid {
+  border-color: red;
 }
