--- a/styles.css
+++ b/styles.css
@@ -61,8 +61,11 @@ div.right > div {
   font-size: 1.3rem;
   padding: 7% 30% 0px 5%;
   letter-spacing: 0.005rem;
-  font-weight: 540;
   font-family: Arial, Helvetica, sans-serif;
+}
+.ad-text > p {
+  font-family: "Times New Roman", Times, serif;
+  font-weight: 540;
 }
 
 .form-area {
@@ -136,4 +139,7 @@ input[type="password"]:valid {
 }
 input[type="password"]:invalid {
   border-color: red;
+}
+.hidden {
+  display: none;
 }
